# theforge

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Makefile  README.md  TOOLS.md  docker-compose.yml  pyproject.toml  text.py
config/: personalization.json  runtime_time_table.jsonl
db/: mock_patients_data.sql  mock_sqlite.db
nginx/: Dockerfile  default.conf
realtime/api/: call.py  call_notebook.ipynb
realtime/forge/: main.py
realtime/forge/modules/: database.py  llm.py  logging.py  memory_management.py  tools.py  utils.py
realtime/local/: functions.py  prompt.py  push_to_talk.py  utils.py
server/: KHIPU_STT_REASONING_TTS.py  LOGIN.py  home.py
server/assets/transcriptions/: Felipe_Gouveia_Portuguese_34860282-e0a7-43ee-b12e-10a8bb897cca.json  Nacho_Orlando_Portuguese_69e72034-a79e-4e11-9580-47d14a4891ab.json  Nacho_Orlando_Spanish_c239044c-ccbe-4cbd-96c0-7228ac971338.json  Samuel_Baptista_Portuguese_c4be9ca4-2ef3-410c-91a9-bb818d14dd0f.json  Samuel_Baptista_Portuguese_e73ba007-5eae-44af-b839-c0ad011a2d67.json  Samuel_Heinrichs_Portuguese_ec631f96-8655-48d7-9af5-4bfcabd5a041.json
server/pages/: EXPERIMENTS_DATABASE.py  KHIPU_AUDIOS.py  KHIPU_AUDIO_DEMO.py  KHIPU_CONVERSATIONS.py  KHIPU_RESULTS.py  KHIPU_STT_REASONING_TTS.py  KIPUH_STT_REASONING_TTS.py  OVERALL_RESULTS.py  RUN_THE_EXPERIMENT!.py  tools.py
server/pages/backups/: tools.py
server/prompts/: evaluation.py  user_call.py  user_call_no_tools.py
